--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,6 @@
         "d:\\Workspace\\Java\\JavaFX\\javafx-sdk-17.0.2\\lib\\javafx.swing.jar",
         "d:\\Workspace\\Java\\JavaFX\\javafx-sdk-17.0.2\\lib\\javafx.web.jar",
         "d:\\Workspace\\Java\\JavaFX\\javafx-sdk-17.0.2\\lib\\javafx-swt.jar"
-    ]
+    ],
+    "editor.rulers": [100,120]
 }
